# msmu

./: .gitignore  404.html  Dockerfile  README.md  bitbucket-pipelines.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml  publish.yml  test.yml  workflow.yml
assets/: custom.css
data/flashlfq/: QuantifiedPeptides.tsv
docs/: 404.html  index.html  index.md  installation.md  nav.md  objects.inv  requirements.txt
docs/assets/: extra.css  jupyter-tweaks.css
docs/how-it-works/: batch_correction.md  data.md  dea.md  filter.md  inference.md  normalization.md  summarization.md  visualization.md
docs/installation/: index.html
docs/reference/: index.html
docs/search/: search_index.json
docs/tutorials/: .pages  dda-lfq.ipynb  dda-tmt.ipynb  dea.ipynb  dia-lfq.ipynb  flashlfq.ipynb  ptm.ipynb  quick_start.ipynb
gen_ref_pages/: gen_ref_pages.py  index.html
how-it-works/batch_correction/: index.html
how-it-works/data/: index.html
how-it-works/dea/: index.html
how-it-works/filter/: index.html
how-it-works/inference/: index.html
how-it-works/normalisation/: index.html
how-it-works/normalization/: index.html
how-it-works/purity/: index.html
how-it-works/summarisation/: index.html
how-it-works/summarization/: index.html
how-it-works/visualisation/: index.html
how-it-works/visualization/: index.html
installation/: index.html
mkdocs/: index.md  installation.md  nav.md
mkdocs/assets/: emoji.css  jupyter-tweaks.css
mkdocs/how-it-works/: batch_correction.md  data.md  dea.md  filter.md  inference.md  normalisation.md  summarisation.md  visualisation.md
mkdocs/howitworks/: dea.md  filter.md  inference.md  normalisation.md  purity.md  summarisation.md
mkdocs/tutorials/: .pages  dda-lfq.ipynb  dda-tmt.ipynb  dea.ipynb  dep.ipynb  dia-lfq.ipynb  dia.ipynb  lfq.ipynb  lfq.md  ptm.ipynb  quick_start.ipynb  tmt.ipynb
msmu/: __init__.py  _version.py
msmu/_plotting/: __init__.py  __pdata.py  __ptypes.py  __trace.py  _charge.py  _common.py  _id.py  _intensity.py  _missingness.py  _pca.py  _pdata.py  _plots.py  _ptypes.py  _purity.py  _set_template.py  _template.py  _umap.py  _utils.py  plots.py
msmu/_preprocessing/: __init__.py  _batch_correction.py  _calculate_precursor_purity.py  _calculate_precursor_purity_deprecated.py  _compute_precursor_purity.py  _filter.py  _infer_protein.py  _infer_protein_deprecated.py  _map_representatives.py  _normalisation.py  _normalise.py  _summarisation.py  _summarise.py
msmu/_read_write/: __init__.py  _base_reader.py  _diann.py  _diann_reader.py  _fragpipe.py  _maxquant.py  _mdata_status.py  _reader.py  _reader_registry.py  _reader_utils.py  _readers.py  _sage.py  _sage_reader.py  normalise_sage_columns.py  normalise_sage_columns_deprecated.py  protein_info_parser.py  protein_info_parser_deprecated.py
msmu/_statistics/: _de_base.py  _multiple_test_correction.py  _permutation.py  _statistics.py  _target_decoy_q.py
msmu/_stats/: target_decoy_q.py
msmu/_tools/: __init__.py  _bmskit.py  _correlation.py  _dea.py  _mokapot.py  _mzml.py  _pca.py  _precursor_purity.py  _umap.py  scverse.py
msmu/_utils/: __init__.py  fasta.py  get.py  peptide.py  protein.py  subset.py  utils.py
msmu/tests/: conftest.py
msmu/tools/: _bmskit.py
nav/: index.html
notebooks/tmt/: 01_read_search_output.ipynb  02_filter.ipynb  03_map_representatives.ipynb  04_summarize.ipynb  (+1 more)
paper/: 01_rna.ipynb  02_protein.ipynb  03_mutliomics.ipynb  meta.csv
scripts/: gen_ref_pages.py
search/: search_index.json
tests/: conftest.py  test_import.py  test_logging_utils.py  test_package_api.py  test_plotting_plots.py  test_plotting_trace_ptypes.py  test_plotting_utils.py  test_preprocessing_correct_batch.py  test_preprocessing_module.py  test_preprocessing_normalise.py  test_read_write.py  test_read_write_export.py  test_read_write_reader_utils.py  test_statistics_permutation_storey.py  test_statistics_statistics.py  test_tools_dea_edge_cases.py  test_tools_module.py  test_tools_pca_umap_dea.py  test_tutorial_dda-tmt.ipynb  test_tutorial_dia-lfq.ipynb  test_tutorial_flashlfq.ipynb  test_tutorial_ptm.ipynb  test_tutorual_dda-lfq.ipynb  test_utils_helpers.py  test_utils_module.py
(+153 files in other folders)
