[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "msmu"
authors = [
    {name = "Hyung-wook Choi", email = "hyungwook.choi@bertis.com"},
    {name = "Byeong-chan Lee", email = "byeongchan.lee@bertis.com"},
]
license = {file = "LICENSE"}
description = "BERTIS LC/MS analysis library through MuData"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["LCMS", "Protein", "Peptide", "Mass Spectrometry"]
dependencies = [
    "mudata",
    "biopython",
    "plotly",
    "pymzml",
    "statsmodels",
    "scipy==1.15.3",
    "scikit-learn",
    "umap-learn",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://bitbucket.org/bertis/msmu"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs"]
