[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "msmu"
authors = [
    {name = "Hyung-wook Choi", email = "hyungwook.choi@bertis.com"},
    {name = "Byeong-chan Lee", email = "byeongchan.lee@bertis.com"},
]
license = {file = "LICENSE"}
description = "BERTIS LC-MS/MS analysis library through MuData"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["LC-MS/MS", "Proteomics", "Protein", "Peptide", "Mass Spectrometry"]
dependencies = [
    "mudata==0.3.2",
    "anndata==0.12.0",
    "biopython",
    "plotly",
    "statsmodels",
    "scipy==1.15.3",
    "scikit-learn",
    "umap-learn",
    "pyopenms",
    "fastparquet",
    "kaleido",
    "combat",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "nbval",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-jupyter",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-literate-nav",
    "mkdocstrings[python]",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
]

[project.urls]
Repository = "https://github.com/bertis-informatics/msmu"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs"]

[tool.setuptools_scm]
write_to = "msmu/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --nbval-lax"
