[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "msmu"
authors = [
    {name = "Hyung-wook Choi", email = "hyungwook.choi@bertis.com"},
    {name = "Byeong-chan Lee", email = "byeongchan.lee@bertis.com"},
]
license = {file = "LICENSE"}
description = "BERTIS LC-MS/MS analysis library through MuData"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["LC-MS/MS", "Proteomics", "Protein", "Peptide", "Mass Spectrometry"]
dynamic = ["version"]
dependencies = [
    "anndata>=0.12.0",
    "biopython>=1.86",
    "fastparquet>=2025.12.0",
    "inmoose>=0.9.1",
    "kaleido>=1.2.0",
    "mudata>=0.3.2",
    "plotly>=6.5.2",
    "pyopenms>=3.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.11",
]

[project.optional-dependencies]
dev = [
    "nbval>=0.11.0",
    "pytest>=9.0.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=1.0.1",
    "pymdown-extensions>=10.20",
]

[project.urls]
Repository = "https://github.com/bertis-informatics/msmu"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs"]

[tool.setuptools_scm]
write_to = "msmu/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --nbval-lax"
